--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vue plugin for Duo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,9 @@
   "homepage": "https://github.com/demohi/duo-vue",
   "dependencies": {
     "vue-component-compiler": "^1.1.0"
+  },
+  "devDependencies": {
+    "duo": "^0.9.0",
+    "mocha": "^2.0.1"
   }
 }
